--- a/client/src/components/Banner/banner.css
+++ b/client/src/components/Banner/banner.css
@@ -3,7 +3,7 @@
     margin: 24px 0;
     padding: 20px 30px 20px 115px;
     box-shadow: 0 0 5px rgba(0, 0, 0, .15);
-    background: #fff;
+    background: #F1FAEE;
     line-height: 20px;
     font-size: 16px;
     font-weight: 300;
