--- a/client/src/components/List/List.css
+++ b/client/src/components/List/List.css
@@ -1,6 +1,7 @@
 .list-overflow-container {
   max-height: 545px;
   border: 1px #DDDDDD solid;
+  background-color: #F1FAEE;
   border-radius: 4px;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -16,18 +17,7 @@
   border-right: none;
 }
 
-.list-overflow-container li * {
-  cursor: pointer;
-}
-
-.list-overflow-container li a {
-  color: #2A878C;
-}
-
-.list-overflow-container li:first-child {
-  border-top: none;
-}
-
-.list-overflow-container li:last-child {
-  border-bottom: none;
+.list-group-item {
+  background-color: #F1FAEE;
+  padding:14px;
 }
