--- a/client/src/components/Nav/nav.css
+++ b/client/src/components/Nav/nav.css
@@ -1,6 +1,5 @@
 .nav-side {
     margin: 55px 0 0;
-    /* height: calc(100vh - 205px); */
     min-height: 227px;
 }
 
@@ -9,6 +8,7 @@
     height: 45px;
     line-height: 45px;
     display: inline-block;
+    clear:both;
     position: relative;
     font-size: 17px;
     margin: 0, 10em, 0, 0;
