Added spinner on article submit

--- a/client/extension-online/ext.css
+++ b/client/extension-online/ext.css
@@ -1,6 +1,11 @@
 body {
     color: honeydew;
     background-color :#1D3557;
+    font-family: Helvetica, sans-serif;
+}
+label {
+    font-family: Times, serif;
+    font-size: 1.1em
 }
 
 #ext-form {
@@ -8,12 +13,32 @@ body {
     padding: 10px;
 }
 
-#submit-article {
-    margin-bottom: 12px;
-}
-
 #logout {
     background-color:red;
     border-color:red;
-    margin-top:  12px;
+}
+
+#logout:hover {
+    background-color:#b10404;
+    border-color:#b10404;
+}
+
+.buttons {
+    margin-bottom:14px;
+    margin-top:14px;
+}
+
+.glyphicon-refresh-animate {
+    -animation: spin 1s infinite linear;
+    -webkit-animation: spin2 1s infinite linear;
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg);}
+    to { transform: scale(1) rotate(360deg);}
 }
