Added ternary operators to denote if user needs to log in or save articles in order to view content on the web app

--- a/client/src/components/Banner/banner.css
+++ b/client/src/components/Banner/banner.css
@@ -8,3 +8,12 @@
     font-size: 16px;
     font-weight: 300;
 }
+
+a:hover {
+    text-decoration: none;
+}
+
+.btn {
+    font-family: 'Lucida Sans', sans-serif;
+    font-weight: 300;
+}
