Added styling to the title of each card so user's could know it's clickable

--- a/client/src/pages/Articles/article.css
+++ b/client/src/pages/Articles/article.css
@@ -9,3 +9,12 @@ p {
     font-size: 1.2em;
     font-weight:300;
 }
+
+.article-url:hover {
+    text-decoration: underline #1D3557;
+    
+}
+
+.article-url h4 {
+    color: #4b88aa;
+}
